--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -228,7 +228,7 @@ blockquote {
     height: 3px;
     width: var(--underline-width);
     transform: translateX(var(--underline-offset-x));
-    background-color: #{$grey-color};
+    background-color: var(--global-underline-color);
     opacity: 0.5;
     transition:
       transform 0.5s,
